# NeSyGround

./: .pre-commit-config.yaml  CLAUDE.md  README.md  __init__.py  base.py  compilation.py  data_loader.py  fact_index.py  factory.py  features.py  filters.py  forward_chaining.py  grounder.py  kb.py  operations.py  packing.py  postprocessing.py  primitives.py  pyproject.toml  rule_index.py  standardization.py  types.py  utils.py
analysis/: __init__.py  _dedup.py  _logging.py  _report.py  bench_flat_vs_dense.py  compare_groundings.py  full_tensor_trace.py  generate_depths_dynamic.py  generate_depths_static.py  gold_standard.py  max_depth_analysis.py
bc/: __init__.py  bc.py  common.py  lazy.py
data/: __init__.py  fact_index.py  kb.py  loader.py  rule_index.py
data/family/: rules.txt
data/wn18rr/: test.txt  train.txt
docs/: filters.md  grounding_fundamentals.md  pipeline_tensors.md  restructure_plan.md  shapes.md  sld_vs_enum.md
docs/exp_analysis/: benchmark_flat_vs_dense.md  max_depth_analysis.md  mem_sld_vs_enum_exp.md  mem_sld_vs_enum_thr.md  sld_vs_enum_flat.md
docs/other/: example.md  memory_analysis.md  report_grounding.md  results_grounders.md  slide.md
docs/other/FOL_grounders/: backward_chaining.md  backward_chaining_sld.md  forward_chaining.md  notation.md  operators.md  parametrized_grounder.md  ppt.md  update_toc.py
docs/other/literature/: Recursive_query_processing.md  (+1 more)
docs/resolution/: fact_index.md  fp_batched.md  grounding_basics.md  grounding_probDB.md  resolution_and_filters.md
docs/system/: api.md  architecture.md  architecture_final.md  architecture_v2.md  extension.md  foundations.md  grounders.md  index.md  pipeline_tensors.md  related.md  soundness.md  tensors.md  walkthrough.md
fc/: __init__.py  fc.py
filters/: __init__.py  _hash.py  hooks.py  provset.py  prune.py
filters/search/: __init__.py  fp_global.py  prune_dead.py  prune_facts.py  width.py
filters/soundness/: __init__.py  fp_batch.py  fp_global.py
grounders/: __init__.py  backward.py  base.py  full.py  kge.py  lazy.py  parametrized.py  prolog.py  provset.py  prune.py  rtf.py  sampler.py  soft.py
nesy/: __init__.py  _util.py  hooks.py  kge.py  neural.py  sampler.py  scoring.py  soft.py
resolution/: __init__.py  enum.py  mgu.py  rtf.py  sld.py  standardization.py
scripts/: check_editable_pins.py
tests/: baseline_utils.py  conftest.py  profile_speed_enum.py  test_datasets.py  test_fact_index.py  test_filters.py  test_grounder.py  test_groundings.py  test_keras_comparison.py  test_keras_grounding_comparison.py  test_packing.py  test_primitives.py  test_rtf.py
tests/baselines/: groundings.json
