[project]
name = "nesyground"
version = "0.1.0"
description = "NeSyGround: Compiled CUDA-graph-safe FOL grounding for neuro-symbolic reasoning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torch-kge-kernels @ git+https://github.com/rodrigo-castellano/torch-kge-kernels.git@bff61e977edfd0ccb0e727b7d252fc6e252daa2c",
]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["grounder*"]
