[project]
name = "nesyground"
version = "0.1.0"
description = "NeSyGround: Compiled CUDA-graph-safe FOL grounding for neuro-symbolic reasoning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torch-kge-kernels @ git+https://github.com/rodrigo-castellano/torch-kge-kernels.git@0a92740b03d4d1b44477cd08682e6d57b809201e",
]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["grounder*"]
