[project]
name = "grounder"
version = "0.1.0"
description = "NeSyGround: Compiled CUDA-graph-safe FOL grounding for neuro-symbolic reasoning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torch-kge-kernels @ git+https://github.com/rodrigo-castellano/torch-kge-kernels.git@59a3d69",
]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

# The repo root IS the `grounder` package: __init__.py and the modules
# (factory.py, types.py, utils.py) sit at the root, and subpackages
# (bc/, fc/, filters/, nesy/, resolution/, analysis/, data/) are siblings.
# We map "grounder" -> "." and each subpackage explicitly so consumers can
# `import grounder` and `from grounder.bc.bc import BCGrounder` after a
# normal `pip install`.
[tool.setuptools]
packages = [
    "grounder",
    "grounder.bc",
    "grounder.fc",
    "grounder.filters",
    "grounder.filters.search",
    "grounder.filters.soundness",
    "grounder.nesy",
    "grounder.resolution",
    "grounder.analysis",
    "grounder.data",
]

[tool.setuptools.package-dir]
"grounder" = "."
"grounder.bc" = "bc"
"grounder.fc" = "fc"
"grounder.filters" = "filters"
"grounder.filters.search" = "filters/search"
"grounder.filters.soundness" = "filters/soundness"
"grounder.nesy" = "nesy"
"grounder.resolution" = "resolution"
"grounder.analysis" = "analysis"
"grounder.data" = "data"
